# rules_cue

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  go.mod  go.sum
.github/actions/build-test/: action.yaml
.github/workflows/: ci.yaml  release.yaml
cue/: BUILD.bazel  cue.bzl  deps.bzl  toolchain.bzl
cue/private/tools/cue/: toolchain.bzl
examples/bazel7/: .bazelrc  .gitignore  WORKSPACE
examples/bazel7/tools/cue/: BUILD.bazel  cmd.bzl  cmd.sh.tpl  test.sh
examples/cue-get-go/: BUILD.bazel  README.md  go.mod  go.sum  k8s.cue
examples/cue-get-go/cue.mod/: module.cue
examples/gazelle/: BUILD.bazel  README.md
examples/gazelle/services/api/: BUILD.bazel
gazelle/cue/: BUILD.bazel  config.go  generate.go  resolve.go
tools/cmd/cuefmt/: BUILD.bazel  defs.bzl
