load("@gazelle//:def.bzl", "gazelle")
load("@rules_cue//cue:cue.bzl", "cue_instance")

# gazelle:prefix github.com/abcue/rules_cue/examples/cue-get-go

# Run this to update BUILD.bazel files:
# bazel run //:gazelle
gazelle(
    name = "gazelle",
    gazelle = "@rules_cue//gazelle:gazelle_binary",
)

# Run this to verify BUILD.bazel files are up to date:
# bazel run //:gazelle_check
gazelle(
    name = "gazelle_check",
    command = "fix",
    extra_args = ["-mode=diff"],
    gazelle = "@rules_cue//gazelle:gazelle_binary",
)

# Run this to update go dependencies:
# bazel run //:gazelle_update_repos
gazelle(
    name = "gazelle_update_repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
    gazelle = "@rules_cue//gazelle:gazelle_binary",
)

cue_instance(
    name = "cuegetgo_cue_instance",
    package_name = "cuegetgo",
    srcs = ["k8s.cue"],
    ancestor = ":cuegetgo_cue_instance",
    visibility = ["//visibility:public"],
    deps = ["//cue.mod/gen/k8s.io/api/core/v1:v1_cue_instance"],
)
